# homelab

./: .gitignore  .justfile  .lefthook.toml  .mise.toml  .renovate.json5  .renovaterc.json5  .sops.yaml  .yamlfmt.yaml  .yayamlls.yaml  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  justfile  renovate.json
.github/: CODEOWNERS  labeler.yaml  labels.yaml  renovate.json5
.github/workflows/: flux-local.yaml  label-sync.yaml  labeler.yaml  renovate.yaml  schemas.yaml  tag.yaml
.renovate/: autoMerge.json5  changelogs.json5  custom.json5  grafanaDashboards.json5  groups.json5  semanticCommits.json5
.taskfiles/resources/: Taskfile.yaml
bridge/: README.md
cluster/: kustomization.yaml
cluster/apps/core/: kustomization.yaml
cluster/apps/core/cilium/: helmrelease.yaml
cluster/apps/core/metallb/: config.yaml  helmrelease.yaml  kustomization.yaml  namespace.yaml  repository.yaml
cluster/apps/services/: kustomization.yaml
cluster/apps/services/capacitor/: helmrepository.yaml
cluster/flux-system/: gotk-sync.yaml
cluster/sources/: kustomization.yaml
clusters/: kustomization.yaml
clusters/homelab/: apps.yaml  common.yaml  kustomization.yaml  sources.yaml
clusters/homelab/flux-system/: gotk-sync.yaml
clusters/infrastructure/apps/: kustomization.yaml
clusters/infrastructure/sources/: kustomization.yaml
clusters/infrastructure/sources/git/: gateway-api.yaml  kustomization.yaml
clusters/infrastructure/sources/helm/: kustomization.yaml
collector/: Cargo.toml
collector/src/: main.rs
data/: usb-stick-boot.cusomisation  usb-stick-boot.env
infrastructure/: mod.just
infrastructure/apps/: kustomization.yaml
infrastructure/apps/cert-manager/: kustomization.yaml
infrastructure/apps/cert-manager/cert-manager/: ks.yaml
infrastructure/apps/core/: kustomization.yaml
infrastructure/apps/core/cert-manager/: helmrelease.yaml  kustomization.yaml  release.yaml
infrastructure/apps/core/cilium/: gateway.yaml  helmrelease.yaml  kustomization.yaml  rbac.yaml  reference-grant.yaml  vmservicescrape.yaml
infrastructure/apps/core/envoy-gateway/: gateway-class.yaml  gateway.yaml  helmrelease.yaml  ks.yaml  kustomization.yaml  namespace.yaml  reference-grant.yaml
infrastructure/apps/database/: kustomization.yaml
infrastructure/apps/flux-system/: kustomization.yaml
infrastructure/apps/gaming/: kustomization.yaml
infrastructure/apps/kube-system/: kustomization.yaml
infrastructure/apps/longhorn-system/: kustomization.yaml
infrastructure/apps/media-center/: kustomization.yaml  namespace.yaml  pvc.yaml
infrastructure/apps/network/: kustomization.yaml
infrastructure/apps/observability/: kustomization.yaml
infrastructure/apps/security/: kustomization.yaml
infrastructure/apps/selfhosted/: kustomization.yaml
infrastructure/apps/services/: kustomization.yaml
infrastructure/apps/system-upgrade/: kustomization.yaml
infrastructure/apps/volsync-system/: kustomization.yaml  namespace.yaml
infrastructure/components/common/: cluster-secrets.sops.yaml  cluster-settings.yaml  kustomization.yaml  namespace.yaml  sops-age.sops.yaml
infrastructure/components/fa/: kustomization.yaml  securitypolicy.yaml
infrastructure/components/no-control-plane/: kustomization.yaml
infrastructure/components/no-control-plane-top-level-affinity/: kustomization.yaml
infrastructure/components/sops/: kustomization.yaml  secret.sops.yaml
infrastructure/components/volsync/: kustomization.yaml  replicationdestination.yaml  replicationsource.yaml  secret.sops.yaml
infrastructure/flux/cluster/: ks.yaml
infrastructure/metal/inventory/: hardware.yaml
infrastructure/sources/: kustomization.yaml
infrastructure/sources/git/: gateway-api.yaml  kustomization.yaml  snapshot-controller.yaml
infrastructure/sources/helm/: authentik.yaml  envoy-gateway.yaml  jetstack.yaml  kustomization.yaml  namecheap-webhook.yaml
infrastructure/sources/oci/: capacitor.yaml  envoy-gateway.yaml  kustomization.yaml
lib/: Cargo.toml  README.md
lib/python/: utils.py
lib/src/: bus.rs  dto.rs  lib.rs  tracing.rs
metal/services/adguard/: docker-compose.yaml
metal/services/caddy/: Caddyfile  Dockerfile  docker-compose.yaml
metal/services/garage/: .env.example  Makefile  docker-compose.yaml  garage.toml
metal/services/komga/: docker-compose.yaml
metal/services/pgbackup/: .env.example  Dockerfile  Makefile  backup.sh  docker-compose.yaml  entrypoint.sh
metal/services/postgres/: Makefile  docker-compose.yaml
metal/services/rclone/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  sync.sh
metal/services/redis/: Makefile  docker-compose.yaml
metal/services/shepherd/: .env.example  docker-compose.yaml
metal/services/soju/: .env.example  config  docker-compose.yaml
metal/services/thelounge/: config.js  docker-compose.yaml
metal/services/vaultwarden/: .env.example  docker-compose.yaml
metal/services/yourspotify/: .env.example  docker-compose.yaml
provision/: justfile
provision/inventory/: hardware.yaml
provision/talos/: controlplane.yaml  installer-customization.yaml  machineconfig.yaml.j2  mod.just  schematic.yaml  secrets.sops.yaml  usb-stick-boot.env  worker.yaml
provision/talos/nodes/: k8s-0.yaml.j2  k8s-1.yaml.j2  k8s-2.yaml.j2
provision/talos/old/: controlplane.yaml  usb-stick-boot.env  worker.yaml
provision/talos/patches/: patch.yaml
provision/tools/spinner/: Cargo.toml
provision/tools/spinner/src/: main.rs
provision/tools/spinner/src/cluster/: provision.rs
quard/: Cargo.toml  README.md
scripts/: run.sh
services/collector/: Cargo.toml  README.md
services/collector/src/: bus.rs  http.rs  main.rs  queue.rs  routes.rs
services/killswitch/src/: main.rs
services/quard/: Cargo.toml  README.md
services/quard/src/: http.rs  main.rs
services/spinner/: Cargo.toml  README.md
services/spinner/src/: cli.rs  config.rs  main.rs
services/spinner/src/cluster/provision/: talos.rs
services/spinner/src/exec/: shell.rs
services/waker/: Cargo.toml
services/waker/src/: main.rs  wol.rs
(+386 files in other folders)
