[workspace]
members = [
    "services/collector",
    "services/echo",
    "services/killswitch",
    "lib",
    "services/quard",
    "services/waker",
]
resolver = "2"

targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[workspace.package]
authors = ["Taylan Dogan <git@taylandogan.info>"]
edition = "2021"
publish = false
version = "0.1.0"

[workspace.dependencies]
amiquip = { version = "0.4.2", default-features = false }
axum = { version = "0.7.5", features = [
    "http2",
    "json",
    "macros",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-prometheus = "0.6.1"
axum-tracing-opentelemetry = "0.18.1"
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive", "env"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
env_logger = "0.11.3"
dotenv = "0.15.0"
envy = "0.4.2"
lib = { path = "lib" }
opentelemetry = { version = "0.23.0", features = ["metrics", "trace"] }
opentelemetry-jaeger = { version = "0.22.0", features = [
    "collector_client",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "tonic", "trace"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
] }
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.38", features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-macros = "2.3.0"
tower = "0.4.13"
tracing = { version = "0.1.40", features = [
    "attributes",
    "release_max_level_info",
] }
tracing-core = "0.1.32"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.24"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
    "std",
    "time",
    "tracing-log"
] }
