[package]
name = "collector"

authors.workspace = true # This is a workspace-wide setting
edition.workspace = true # This is a workspace-wide setting
version.workspace = true # This is a workspace-wide setting
publish.workspace = true # This is a workspace-wide setting

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
clap.workspace = true
color-eyre.workspace = true