[package]
name = "spinner"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
lib.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
