[package]
name = "waker"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
axum-server.workspace = true
serde.workspace = true
tokio.workspace = true