[package]
name = "spinner"
authors = ["Taylan Dogan <git@taylandogan.info>"]
edition = "2024"
publish = false
version = "0.1.0"


[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
tracing = { version = "0.1.41", features = [
    "attributes",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
    "std",
    "time",
    "tracing-log",
] }
